--- a/grails-app/assets/stylesheets/main.css
+++ b/grails-app/assets/stylesheets/main.css
@@ -1,7 +1,7 @@
 /* FONT STACK */
 body,
 input, select, textarea {
-    font-family: "Open Sans", "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+    font-family: "Lato", "Open Sans", "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -39,6 +39,15 @@ body {
     -moz-box-shadow: 0 0 0.3em #424649;
     -webkit-box-shadow: 0 0 0.3em #424649;
     box-shadow: 0 0 0.3em #424649;
+    height:100%;
+}
+
+.footer {
+    position:absolute;
+    bottom:0;
+    width:100%;
+    height:100px;   /* Height of the footer */
+    background:#6cf;
 }
 
 #grailsLogo {
@@ -91,6 +100,7 @@ img {
     margin-top: 1.5em;
     padding: 1em;
     min-height: 1em;
+
 }
 
 .footer a {
@@ -109,7 +119,42 @@ img {
 }
 
 /* NAVIGATION MENU */
+#logged-in {
+    display:inline-block;
+    text-decoration:none;
 
+}
+#logged-in a {
+    color:white;
+    font-size:20px;
+    text-decoration:none;
+
+}
+#logged-in a:hover {
+    text-decoration:none;
+    background-color:#F7F7F7;
+}
+#logged-in .dropdown-menu a {
+    color:black;
+    text-decoration:none;
+    font-size:12px;
+}
+#logged-in .dropdown-menu a:active {
+
+}
+#logged-in .dropdown-menu a:hover {
+    background-color:#F7F7F7;
+}
+
+.navbar-brand {
+}
+.navbar {
+
+    padding:1rem 0 2rem 0;
+}
+#navbar-container {
+    background-color: #8FB2CE;
+}
 .nav {
     zoom: 1;
 }
@@ -366,17 +411,75 @@ input:invalid:focus, select:invalid:focus, textarea:invalid:focus {
     box-shadow: 0 0 0.5em #ffaaaa;
 }
 
+/* CUSTOM */
+#stats-list {
+    margin-bottom:20rem;
+}
+
+#edit-fieldset {
+    padding:0;
+    margin:0;
+}
+#input-quizname {
+    width:50%;
+    height:40px;
+    margin-top:10px;
+    font-size:24px;
+}
+#input-edit {
+
+}
+
+.inlineLeft, .inlineRight {
+    display: inline-block;
+}
+
+.inlineRight {
+    display:inline-block;
+    position:absolute;
+    right:0;
+    margin-right:8px;
+}
+
+.overhead-title {
+    margin:2rem 0rem 5rem 0rem;
+}
+.overhead-title h1 {
+    font-size:28px;
+    padding:2rem 0rem;
+    margin:0rem;
+    display:inline-block;
+    border-bottom:none;
+}
+.overhead-title button {
+    font-size:12px;
+    color:white;
+    margin:20px 0;
+    padding:0.6rem 1.5rem;
+    display:inline-block;
+    float:right;
+    border-radius:30px;
+    background-color:#ffa733;
+}
+.overhead-title button a {
+    text-decoration:none;
+    color:white;
+}
+.btn-inform-action {
+    background-color:#8FB2CE!important;
+}
+
 /* TABLES */
 
 table {
-    border-top: 1px solid #DFDFDF;
+
     border-collapse: collapse;
     width: 100%;
     margin-bottom: 1em;
 }
 
 tr {
-    border: 0;
+    border-bottom:1px solid #DDDDDD;
 }
 
 tr>td:first-child, tr>th:first-child {
@@ -389,21 +492,49 @@ tr>td:last-child, tr>th:last-child {
 
 td, th {
     line-height: 1.5em;
-    padding: 0.5em 0.6em;
-    text-align: left;
+    padding: 1rem 0.6em 0.8rem 0.6rem;
+    text-align: center;
     vertical-align: top;
+}
+th:first-child {
+    text-align:left;
+}
+tr:first-child {
+    text-align:left;
+
+}
+td:first-child {
+    text-align:left;
+}
+.td-button {
+    text-align:center;
+    font-size:20px;
+}
+.td-button i {
+    color:#8FB2CE;
+}
+.td-button img {
+    height:50px;
+    padding:0;
+    margin:0;
+    width:auto;
 }
 
 th {
-    background-color: #efefef;
-    background-image: -moz-linear-gradient(top, #ffffff, #eaeaea);
-    background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, #ffffff), color-stop(1, #eaeaea));
+    font-weight:100;
+    font-size:12px;
+    border-top:none;
+    /*background-image: -moz-linear-gradient(top, #ffffff, #eaeaea);
+    background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, #ffffff), color-stop(1, #eaeaea));*/
     filter: progid:DXImageTransform.Microsoft.gradient(startColorStr = '#ffffff', EndColorStr = '#eaeaea');
     -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorStr='#ffffff', EndColorStr='#eaeaea')";
     color: #666666;
-    font-weight: bold;
     line-height: 1.7em;
     padding: 0.2em 0.6em;
+}
+
+th:first-child {
+    font-weight:900;
 }
 
 thead th {
