EXTERNAL code markings [quiz.css] and [StudentController.groovy

--- a/grails-app/assets/stylesheets/quiz.css
+++ b/grails-app/assets/stylesheets/quiz.css
@@ -47,6 +47,11 @@
     opacity: 1;
 }
 
+
+/* EXTERNAL CODE FROM STACKOVERFLOW
+http://jsfiddle.net/YB8UW/8/
+*/
+
 .answer-list {
 
     list-style-type:none;
